--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node api/upload.js"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +17,6 @@
     "googleapis": "^144.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16"
-  }
+  },
+  "devDependencies": {}
 }
