--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "google-drive-uploader",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node api/upload.js"
@@ -17,6 +18,5 @@
     "googleapis": "^144.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16"
-  },
-  "devDependencies": {}
+  }
 }
